# bgplab

./: defaults.yml
ibgp/3-rr/: pyproject.toml
